--- a/src/templates/ProteinLocalization.html
+++ b/src/templates/ProteinLocalization.html
@@ -229,25 +229,20 @@ border-radius: 12px;" class="button button6" onclick="submitForm('/downsampled_P
                 <p>The labels are the classes or the groups the genes are mapped into.The labels can act as both target variable or feature
                 as per the need of the user for solving their specific problem </p>
                <h4>19.1 No Label</h4>
-                <p>This selection is provided to enable user to view the properties of all genes without labeling
-                    them into different gene categories or annotations. This is to let user examine the features of
+                <p>This selection is provided to enable users to view the properties of all genes without labeling
+                    them into different gene categories or annotations. This is to let users examine the features of
                     multiple genes and identify common patterns among them. As it involves the inspection of
                 all the genes therefore they work only for "Submit for analysis" button .</p>
                 <h4>19.2 Classical Genes</h4>
-                <p>Classical genes can be defined as most studied genes for visible mutant phenotype (for example: liguleless3). </p>
+                <p>Classical genes can be defined as the most well-studied genes mainly for their visible mutant phenotype (for example: liguleless3). </p>
                 <h4>19.3 Pan-genome Genes </h4>
-                <p>A gene in a given taxonomic group is either present in every individual (core), or absent in at least a single
-                    individual (dispensable) and so on . </p>
+                <p>A gene in a given taxonomic group is either present in every individual (core), or absent in at least a single individual (dispensable). </p>
                 <h4>19.4 Origin Genes </h4>
-                <p>Gene duplication is an important evolutionary mechanism allowing to provide new genetic material and thus
-                    opportunities to acquire new gene functions for an organism . There are different Origins of duplications
-                    such as WGD, Tandem and so on. </p>
+                <p>Gene duplication is an important evolutionary mechanism allowing new genetic material and thus opportunities to acquire new gene functions for an organism. There are different origins of duplications such as whole-genome duplications, tandems, etc.  </p>
                 <br>
                <h3>Graph interpretations:</h3>
 
-                <p>To the top right corner of the plots/graphs, there are also options to download plot,
-                    zoom-out/zoom in, reset axes, autoscale, toggle spike lines, show closest data on hover, compare data on hover, box select,Pan
-                and lasso. Users can also select specific legends to view data only for the selected legends. Details on the interactive plot options are available here:
+                <p>To the top right corner of the plots/graphs, there are options to download plot, zoom-out/zoom in, reset axes, autoscale, toggle spike lines, show closest data on hover, compare data on hover, box select, pan and lasso. Users can also select specific legends to view data only for the selected legends. Details on the interactive plot options are available here: 
                 <br>
                     <a href = https://plotly.com/chart-studio-help/getting-to-know-the-plotly-modebar/>Interactive graph features</a>
                     </p>
@@ -255,9 +250,9 @@ border-radius: 12px;" class="button button6" onclick="submitForm('/downsampled_P
 
                 <h4>1. Categorical Bar chart </h4>
                 <p>The Categorical Bar chart shows the frequency distribution of the different categories in the
-                    selected protein structures such as Signal Peptides.
+                    selected Protein Localization features such as Subcel1.
                 The X-axis in the Categorical bar chart represents the different categories in the selected protein structure.
-                The Y-axis represents the frequency of the categories in the selected protein structure. In addition to the graph,to
+                The Y-axis represents the frequency of the categories in the selected Protein Localization. In addition to the graph,to
                     increase the interpretability of the data, We have also included P-values, mean and standard deviations of the selected
                     datasets. </p>
 
@@ -268,10 +263,10 @@ border-radius: 12px;" class="button button6" onclick="submitForm('/downsampled_P
                     a number of groups, such that data points in a group are more similar to other data points in the
                     same group and dissimilar to the data points in other groups. It is basically a collection of
                     objects based on similarity and dissimilarity between them.<br>
-                In the K-mode bar plot, we divided our observations for the selected protein structures into K-clusters.
+                In the K-mode bar plot, we divided our observations for the selected protein localizations into K-clusters.
              <br>The X-axis in the K-mode bar plot represents the K-clusters within each categories of the selected protein localizations.
                      <br>
-                The Y-axis represents the frequency of the K-clusters within each categories in the selected protein structure.  </p>
+                The Y-axis represents the frequency of the K-clusters within each categories in the selected protein localizations.  </p>
 
             </div>
     </div>
