--- a/src/templates/model_advanced.html
+++ b/src/templates/model_advanced.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="static/css/main.css">
+    <script src = "../js/model_basic.js"></script> <!-- jp import page-specific js file -->
       <!--add icon link -->
      <link rel = "icon" type = "image/x-icon" href ="static/forecast_logo.png">
     <title>Gene Prediction Model</title>
@@ -43,9 +44,9 @@
                   <tr><th colspan="2"><center><b><h4>{{ prediction_text}}</h4></b></center></th></tr>
                 </tfoot>
                  <tr><td><label for = "ka_div_ks_plus1_x">ka/ks ratio sorghum vs B73 :</label></td>
-                  <td>
+                  <td width="35%">
                     <span>
-                      <input  class="form-control" type= "text" name="ka_div_ks_plus1_x" placeholder="Value range: 0.00 - 100.00" required="required" />
+                      <input  onchange="validate_range(this, 2);" min="0.00" max="100.00" step="1" class="form-control" type= "number" name="ka_div_ks_plus1_x" placeholder="Value range: 0.00 - 100.00" required="required" />
                     </span>
                 </td></tr>
         </div>
@@ -55,7 +56,7 @@
         <div class="col-sm-10">
           <tr><td><label for = "EREB_138">Transcription Factor EREB 138 Count :</label></td>
             <td>
-          <span><input  class="form-control" type="text" name="EREB_138" placeholder="Value range: 0.00 - 9.00" required="required" /></span>
+          <span><input onchange="validate_range(this, 2);" min="0.00" max="9.00" step = "0.50" class="form-control" type="number" name="EREB_138" placeholder="Value range: 0.00 - 9.00" required="required" /></span>
           </td></tr>
         </div>
       </div>
@@ -66,7 +67,7 @@
           <tr><td><label for = "Total_PFAM_x">Total PFAM domain Count:</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="Total_PFAM_x" placeholder="Value range: 0.00 - 1.00" required="required" />
+          <input onchange="validate_range(this, 2);" min="0" max="1.00" step="0.01" class="form-control" type="number" name="Total_PFAM_x" placeholder="Value range: 0.00 - 1.00" required="required" />
         </span>
       </td></tr>
         </div>
@@ -77,7 +78,7 @@
         <tr><td><label for = "ka_div_ks_plus1_y">ka/ks ratio Tzi8 vs B73 :</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="ka_div_ks_plus1_y" placeholder="Value range: 0.00 - 307.25" required="required" />
+          <input  class="form-control" onchange="validate_range(this, 2);" min = "0.00" max="307.25" step="1.00" type="number" name="ka_div_ks_plus1_y" placeholder="Value range: 0.00 - 307.25" required="required" />
           </span>
         </td></tr>
         </div>
@@ -88,7 +89,7 @@
           <tr><td><label for = "Origin_Tandem">Tandem Genes :</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="Origin_Tandem" placeholder="Value range: 0.00 - 1.00" required="required" />
+          <input  class="form-control" onchange="validate_range(this, 2);" min="0.00" max="1.00" step="0.01" type="number" name="Origin_Tandem" placeholder="Value range: 0.00 - 1.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -99,7 +100,7 @@
           <tr><td><label for = "Ear_E6_Repression/Activation">Ear E6 Repression/Activation Histone modification Count :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="Ear_E6_Repression/Activation" placeholder="Value range: 0.00 - 6.00" required="required" />
+          <input onchange="validate_range(this, 2);" min="0.00" max="6.00" step="0.05" class="form-control" type="number" name="Ear_E6_Repression/Activation" placeholder="Value range: 0.00 - 6.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -110,7 +111,7 @@
           <tr><td><label for = "dTSS_root">Transcription Start Site Root Count:</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="dTSS_root" placeholder="Value range: 0.00 - 14.00" required="required" />
+          <input  class="form-control" onchange="validate_range(this, 2);" min="0.00" max="14.00" step="0.50" type="number" name="dTSS_root" placeholder="Value range: 0.00 - 14.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -121,7 +122,7 @@
           <tr><td><label for = "dis_to_Knob">Distance to Knob:</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="dis_to_Knob" placeholder="Value range: 0.00 - 237017383" required="required" />
+          <input onchange="validate_range(this, 2);" min="0.00" max="237017383" step="10" class="form-control" type="number" name="dis_to_Knob" placeholder="Value range: 0.00 - 237017383" required="required" />
           </span>
         </td></tr>
         </div>
@@ -132,7 +133,7 @@
           <tr><td><label for = "Ks_B73_vs_sorghum">Ks B73 vs Sorghum :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="Ks_B73_vs_sorghum" placeholder="Value range: 0.00 - 157.73" required="required" />
+          <input  min="0.00" max="157.73" step="1.00" onchange="validate_range(this, 2);" class="form-control" type="number" name="Ks_B73_vs_sorghum" placeholder="Value range: 0.00 - 157.73" required="required" />
           </span>
         </td></tr>
         </div>
@@ -143,7 +144,7 @@
           <tr><td><label for = "V5_TE">Transposable Elememt Count :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="V5_TE" placeholder="Value range: 0.00 - 295.00" size="5" required="required"/>
+          <input onchange="validate_range(this, 2);" min="0.00" max="295.00" step="1" class="form-control" type="number" name="V5_TE" placeholder="Value range: 0.00 - 295.00" size="5" required="required"/>
           </span>
         </td></tr>
         </div>
@@ -153,7 +154,7 @@
         <div class="col-sm-10">
           <tr><td><label for = "UTR3length">3 Prime UTR Length :</label></td>
             <td>
-          <span><input  class="form-control" type="text" name="UTR3length" placeholder="Value range: 0.00 - 8154.00" required="required" /></span>
+          <span><input onchange="validate_range(this, 2);" min="0.00" max="8154.00" step="10" class="form-control" type="number" name="UTR3length" placeholder="Value range: 0.00 - 8154.00" required="required" /></span>
           </td></tr>
         </div>
       </div>
@@ -164,7 +165,7 @@
           <tr><td><label for = "TC_WDR">Tri Codon WDR:</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="TC_WDR" placeholder="Value range: 0.00 - 0.018" required="required" />
+          <input onchange="validate_range(this, 3);" min="0.00" max="0.018" step="0.001" class="form-control" type="number" name="TC_WDR" placeholder="Value range: 0.00 - 0.018" required="required" />
         </span>
       </td></tr>
         </div>
@@ -175,7 +176,7 @@
         <tr><td><label for = "TC_HEN">Tri Codon HEN :</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="TC_HEN" placeholder="Value range: 0.00 - 0.0147" required="required" />
+          <input  class="form-control" onchange="validate_range(this, 4);" min="0.0000" max="0.0147" step="0.0001" type="number" name="TC_HEN" placeholder="Value range: 0.00 - 0.0147" required="required" />
           </span>
         </td></tr>
         </div>
@@ -186,7 +187,7 @@
           <tr><td><label for = "TC_WAA">Tri Codon WAA:</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="TC_WAA" placeholder="Value range: 0.00 - 0.0208" required="required" />
+          <input onchange="validate_range(this, 4);" min="0.00" max="0.0208" step="0.001" class="form-control" type="number" name="TC_WAA" placeholder="Value range: 0.00 - 0.0208" required="required" />
           </span>
         </td></tr>
         </div>
@@ -197,7 +198,7 @@
           <tr><td><label for = "chrom_chr10">Chromosome 10 :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="chrom_chr10" placeholder="Value range: 0.00 - 1.00" required="required" />
+          <input  class="form-control" onchange="validate_range(this, 2);" min="0.00" max="1.00" step="0.01" type="number" name="chrom_chr10" placeholder="Value range: 0.00 - 1.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -208,7 +209,7 @@
           <tr><td><label for = "SNPS">SNPS :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="SNPS" placeholder="Value range: 0.00 - 9592.00" required="required" />
+          <input onchange="validate_range(this, 2);" min="0.00" max="9592.00" step="10.00" class="form-control" type="number" name="SNPS" placeholder="Value range: 0.00 - 9592.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -219,7 +220,7 @@
           <tr><td><label for = "1kb_EREB_29">Transcription Factor 1kb EREB 29 Count :</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="1kb_EREB_29" placeholder="Value range: 0.00 - 6.00" required="required" />
+          <input onchange="validate_range(this, 2);" min="0.00" max="6.00" step="0.10" class="form-control" type="number" name="1kb_EREB_29" placeholder="Value range: 0.00 - 6.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -230,7 +231,7 @@
           <tr><td><label for = "TC_GRR">Tri Codon GRR :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="TC_GRR" placeholder="Value range: 0.00 - 0.038" required="required" />
+          <input onchange="validate_range(this, 3);" min="0.00" max="0.038" step="0.001" class="form-control" type="number" name="TC_GRR" placeholder="Value range: 0.00 - 0.038" required="required" />
           </span>
         </td></tr>
         </div>
@@ -241,7 +242,7 @@
           <tr><td><label for = "dTSS_shoot">Transcription Start Site Shoot Count :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="dTSS_shoot" placeholder="Value range: 0.00 - 16.00" size="5" required="required"/>
+          <input onchange="validate_range(this, 2);" min="0.00" max="16.00" step="0.10" class="form-control" type="number" name="dTSS_shoot" placeholder="Value range: 0.00 - 16.00" size="5" required="required"/>
           </span>
         </td></tr>
         </div>
@@ -251,7 +252,7 @@
           <tr><td><label for = "gene_breadth">Gene Breadth :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="gene_breadth" placeholder="Value range: 0.00 - 171.00" required="required" />
+          <input onchange="validate_range(this, 2);" min="0.00" max="171.00" step="1.00" class="form-control" type="number" name="gene_breadth" placeholder="Value range: 0.00 - 171.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -262,7 +263,7 @@
           <tr><td><label for = "dis_to_cen">Distance to Centomere :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="dis_to_cen" placeholder="Value range: 0.00 - 170670191" required="required" />
+          <input  onchange="validate_range(this, 2);" min="0.00" max="170670191" step="10" class="form-control" type="number" name="dis_to_cen" placeholder="Value range: 0.00 - 170670191" required="required" />
           </span>
         </td></tr>
         </div>
@@ -273,7 +274,7 @@
           <tr><td><label for = "Leaf_E1_Activation">Leaf E1 Activation Histone modification Count :</label></td>
           <td>
           <span>
-          <input  class="form-control" type="text" name="Leaf_E1_Activation" placeholder="Value range: 0.00 - 4.00" required="required" />
+          <input onchange="validate_range(this, 2);" min="0.00" max="4.00" step="0.10" class="form-control" type="number" name="Leaf_E1_Activation" placeholder="Value range: 0.00 - 4.00" required="required" />
           </span>
         </td></tr>
         </div>
@@ -284,7 +285,7 @@
           <tr><td><label for = "1kb_ARF_34">Transcription Factor 1kb ARF 34 Count :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="1kb_ARF_34" placeholder="Value range: 0.00 - 5.00" size="5" required="required"/>
+          <input onchange="validate_range(this, 2);" min="0.00" max="5.00" step="0.10" class="form-control" type="number" name="1kb_ARF_34" placeholder="Value range: 0.00 - 5.00" size="5" required="required"/>
           </span>
         </td></tr>
         </div>
@@ -295,7 +296,7 @@
           <tr><td><label for = "1kb_EREB_138">Transcription Factor 1kb EREB 138 Count :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="1kb_EREB_138" placeholder="Value range: 0.00 - 6.00" size="5" required="required"/>
+          <input  onchange="validate_range(this, 2);" min="0.00" max="6.00" step="0.10" class="form-control" type="number" name="1kb_EREB_138" placeholder="Value range: 0.00 - 6.00" size="5" required="required"/>
           </span>
         </td></tr>
         </div>
@@ -306,7 +307,7 @@
           <tr><td><label for = "LBD19">Transcription Factor LBD19 Count :</label></td>
             <td>
           <span>
-          <input  class="form-control" type="text" name="LBD19" placeholder="Value range: 0.00 - 13.00" size="5" required="required"/>
+          <input  onchange="validate_range(this, 2);" min="0.00" max="13.00" step="0.50" class="form-control" type="number" name="LBD19" placeholder="Value range: 0.00 - 13.00" size="5" required="required"/>
           </span>
         </td></tr>
         </div>
